# FinancePlanner

./: README.md  alembic.ini  database.db  package-lock.json  pyproject.toml  requirements.txt
app/: .env.example  .gitignore  __main__.py  config.py
app/api/auth/: auth_routes.py
app/api/planner/: categories_routes.py  expenses_routes.py  planner_routes.py
app/db/: db.py
app/migrations/: env.py
app/migrations/versions/: 1c9bb7c02e0f_for_personal_user.py  20461ef1b13f_for_personal_user.py  24cc381c93fc_for_personal_user.py  2f2bc3d76032_for_personal_user.py  2ff4654907f2_for_users.py  39ebea04b7c6_for_personal_user.py  42a9d6e796d6_for_personal_user.py  57e71935fc5d_add_model.py  5daa047cc4ad_add_model.py  66eee275e1ea_initial_migration.py  69d7f89aa72b_for_personal_user.py  6f5a5f017019_for_users.py  7fcf68c01df5_for_personal_user.py  844b7090176b_for_personal_user.py  8fa0bae5aa71_create_base_db.py  9c91309d50e8_for_accounts.py  a3834b2e54d5_for_personal_user.py  aad6018c07b9_add_model.py  c85f7866e472_for_accounts.py  caec2b84b75f_for_personal_user.py  ce310f5d7832_add_model.py  dbf0ddd29a79_for_accounts.py  e029d5553083_for_personal_user.py  e0cf7ba1e3f0_for_personal_user.py  (+5 more)
app/models/: __init__.py  category.py  expense.py  planner_models.py  user.py
app/schemas/: account.py  category.py  expense.py  user.py
app/utils/: planner_utils.py
finance-frontend/: package-lock.json  package.json
finance-frontend/src/: App.tsx
frontend/: package-lock.json  package.json
frontend/src/: .env.example  App.css  App.tsx  config.json  index.css  main.tsx
(+55 files in other folders)
