[tool.poetry]
name = "financeplanner"
version = "0.1.0"
description = ""
authors = ["Alexander <borzoff@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
flask = {extras = ["async"], version = "^3.0.3"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
aiosqlite = "^0.20.0"
flask-jwt-extended = "^4.6.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
